--- a/EksamenM2E2017.Opskrifter/MainWindow.xaml
+++ b/EksamenM2E2017.Opskrifter/MainWindow.xaml
@@ -53,12 +53,12 @@
                     <Label Content="Liste af Ingredienser" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Width="250"/>
                     <DataGrid x:Name="DtgAllIngredients" HorizontalAlignment="Left" Height="209" Margin="10,103,0,0" VerticalAlignment="Top" Width="250" IsReadOnly="True" />
                     <DataGrid x:Name="DtgItemsInNewRecipe" HorizontalAlignment="Left" Height="179" Margin="298,103,0,0" VerticalAlignment="Top" Width="272" IsReadOnly="True"/>
-                    <Button x:Name="BtnAddNewRecipe" Content="Tilføj" HorizontalAlignment="Left" Margin="298,290,0,0" VerticalAlignment="Top" Width="75" Height="22"/>
+                    <Button x:Name="BtnAddNewRecipe" Content="Tilføj" HorizontalAlignment="Left" Margin="298,290,0,0" VerticalAlignment="Top" Width="75" Height="22" Click="BtnAddNewRecipe_Click"/>
                     <Label Content="Total Pris:" HorizontalAlignment="Left" Margin="378,287,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="LblTotalPrice" Content="0" HorizontalAlignment="Left" Margin="443,287,0,0" VerticalAlignment="Top" Width="127" HorizontalContentAlignment="Right"/>
                     <Label Content="Ingredienser i opskriften" HorizontalAlignment="Left" Margin="298,72,0,0" VerticalAlignment="Top" Width="272"/>
                     <Button x:Name="BtnMoveItemLeft" Content="&lt;" HorizontalAlignment="Left" Margin="265,180,0,0" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.519,1.521"/>
-                    <Button x:Name="BtnMoveItemRight" Content="&gt;" HorizontalAlignment="Left" Margin="265,204,0,0" VerticalAlignment="Top" Width="28"/>
+                    <Button x:Name="BtnMoveItemRight" Content="&gt;" HorizontalAlignment="Left" Margin="265,204,0,0" VerticalAlignment="Top" Width="28" Click="BtnMoveItemRight_Click"/>
                 </Grid>
             </TabItem>
         </TabControl>
